--- a/myner/manifest.json
+++ b/myner/manifest.json
@@ -21,8 +21,7 @@
     "content_scripts": [
       {
         "matches": ["<all_urls>"],
-        "js": ["content.js"],
-        "css": ["content.css"]
+        "js": ["content.js"]
       }
     ],
 
